--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10"
   }
 }
