--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx babel-node src/server.js",
+    "dev": "nodemon --exec 'npm start'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
